Fix - Margin error on mobile view, complete.

--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -128,6 +128,10 @@
     flex-direction: column;
   }
 
+  .gpt3__whatgpt3 {
+    margin: 40px;
+  }
+
   /* Customizing feature component as per needs */
   .gpt3__whatgpt3-feature .gpt3__features-container_feature-text {
     margin-top: 0.5rem;
